- New press page - Press footer link not shown on iPhone - Footer no longer fades in and out on desktop

--- a/static/css/iphone.css
+++ b/static/css/iphone.css
@@ -77,3 +77,7 @@ a.app-store-button img {
 #footer .footer-wrapper {
 	left: 0;
 }
+
+#presslink {
+    display: none;
+}
